--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-  <div class="container navbar-class">
+  <div id="navbar" class="container navbar-class">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <img src="images/logo.png" alt="">
+      <img src="images/logo.png" alt="logo">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,8 @@
                 possimus autem iste fugiat sint amet minus enim. Hic facilis error ipsa, nihil sint vero voluptatem.
               </p>
 
-              <button type="button" class="buy-now-btn">BUY NOW >></button>
+              <a href="https://www.google.com"><button type="button" class="buy-now-btn">BUY NOW >></button>
+              </a>
             </div>
             <div class="col-md-6">
               <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
@@ -291,98 +292,70 @@
 
 
 
-  <div id="footer">
 
 
-    <div class="bg-secondary py-3 text-white">
-      <div class="row">
-        <div class="col-3">
-          <h4>About Us</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas accusamus enim voluptatem nostrum
-            veritatis, quis ut ducimus?</p>
-
-        </div>
-        <div class="col-3 text-center">
-          <h4>Useful Links</h4>
-          <ul class="list-unstyled">
-            <li>
-              <a class="text-white" href="">Home</a>
-            </li>
-            <li>
-              <a class="text-white" href="">About Us</a>
-
-            </li>
-            <li>
-              <a class="text-white" href="">Services</a>
-
-            </li>
-            <li>
-              <a class="text-white" href=""> Contact</a>
-
-            </li>
-            <li>
-              <a class="text-white" href=""> Privacy Policy</a>
-
-            </li>
-          </ul>
-        </div>
-        <div class="col-3">
-          <h4>Contact Us</h4>
-          <p>
-          <address>
-            22/4, Fulbarigate, KUET <br>
-            Khulna-9203.
-          </address>
-          <strong>Phone :</strong> +8801783186463
-          <strong>Email:</strong><a href="mailto:sadrul.himel@gmail.com">test@test.com</a>
-
-          </p>
-
-        </div>
-        <div class="col-3">
-          <h4>Newsletters</h4>
-          <div id="newsletters">
-
-            <input type="email" name="" id="email" placeholder="Enter your Email">
-
-            <button type="button" class="buy-now-btn">Subscribe</button>
-          </div>
-        </div>
+  <div class="w-100 bg-secondary py-3 text-white">
+    <div class="row">
+      <div class="col-md-3">
+        <h4>About Us</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas accusamus enim voluptatem nostrum
+          veritatis, quis ut ducimus?</p>
 
       </div>
-    </div>
+      <div class="col-md-3 ">
+        <h4>Useful Link</h4>
+        <ul class="list-unstyled">
+          <li>
+            <a class="text-white" href="">Home</a>
+          </li>
+          <li>
+            <a class="text-white" href="">About Us</a>
 
-    <div class="container-fluid bg-dark text-center text-white">
-      <small>© 2020. Hot-Gadget. All right reserved, Cantonment, Mymensingh.</small>
+          </li>
+          <li>
+            <a class="text-white" href="">Services</a>
+
+          </li>
+          <li>
+            <a class="text-white" href=""> Contact</a>
+
+          </li>
+          <li>
+            <a class="text-white" href=""> Privacy Policy</a>
+
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h4>Contact Us</h4>
+        <p>
+        <address>
+          22/4, Fulbarigate, KUET <br>
+          Khulna-9203.
+        </address>
+        <strong>Phone :</strong> +8801783186463 <br>
+        <strong>Email :</strong><a class="text-white" href="mailto:sadrul.himel@gmail.com">test@test.com</a>
+
+        </p>
+
+      </div>
+      <div class="col-md-3 newsletters">
+        <h4 >Newsletters</h4>
+        
+
+          <input type="email" name="email" id="email" placeholder="Enter your Email">
+
+          <button type="button" class="buy-now-btn">Subscribe</button>
+        </div>
+      
 
     </div>
   </div>
 
+  <div id="copyright" class="container-fluid bg-dark text-center text-white">
+    <small>© 2020. Hot-Gadget. All right reserved, Cantonment, Mymensingh.</small>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </div>
 
 
 
